--- a/plugin.yml
+++ b/plugin.yml
@@ -5,4 +5,6 @@ commands:
   reactchat: 
 permissions:
   reactchat.react:
+    description: Allows a user to react to chat messages
   reactchat.receive:
+    description: Allows users to react to users that have permission
