--- a/.classpath
+++ b/.classpath
@@ -1,23 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/classes" path="src">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="src" path="src/main/resources"/>
+	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Drew Dorris.DrewDorris-HP/Desktop/lots of stuff/server 2/spigot.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Drew Dorris.DrewDorris-HP/Desktop/lots of stuff/bungeecord/BungeeCord.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Drew Dorris.DrewDorris-HP/Desktop/lots of stuff/minecraft_server.1.12.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
